shaderc-bindings/shaderc_wrapper.h

typedef struct shaderc_compile_options* shaderc_compile_options_t;
// Target environment
typedef enum {
    shaderc_target_env_vulkan = 0,
    shaderc_target_env_opengl = 1,
    shaderc_target_env_opengl_compat = 2,
    shaderc_target_env_webgpu = 3,
} shaderc_target_env;
// SPIR-V version
typedef enum {
    shaderc_spirv_version_1_0 = 0x010000,
    shaderc_spirv_version_1_1 = 0x010100,
    shaderc_spirv_version_1_2 = 0x010200,
    shaderc_spirv_version_1_3 = 0x010300,
    shaderc_spirv_version_1_4 = 0x010400,
    shaderc_spirv_version_1_5 = 0x010500,
    shaderc_spirv_version_1_6 = 0x010600,
} shaderc_spirv_version;
void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options,
                                                   void* resolver_fn,
                                                   void* releaser_fn,
                                                   void* user_data);
void shaderc_compile_options_set_suppress_warnings(shaderc_compile_options_t options);
void shaderc_compile_options_set_target_env(shaderc_compile_options_t options,
                                            shaderc_target_env target,
                                            uint32_t version);
void shaderc_compile_options_set_target_spirv(shaderc_compile_options_t options,
                                              shaderc_spirv_version version);
void shaderc_compile_options_set_warnings_as_errors(shaderc_compile_options_t options);
void shaderc_compile_options_set_limit(shaderc_compile_options_t options,
                                       int limit, int value);