shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options, void *resolver_fn, void *releaser_fn, void *user_data)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_include_callbacks$handle() {
        return shaderc_compile_options_set_include_callbacks.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options, void *resolver_fn, void *releaser_fn, void *user_data)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_include_callbacks$address() {
        return shaderc_compile_options_set_include_callbacks.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options, void *resolver_fn, void *releaser_fn, void *user_data)
     * }
     */
    public static void shaderc_compile_options_set_include_callbacks(MemorySegment options, MemorySegment resolver_fn, MemorySegment releaser_fn, MemorySegment user_data) {
        var mh$ = shaderc_compile_options_set_include_callbacks.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_include_callbacks", options, resolver_fn, releaser_fn, user_data);
            }
            mh$.invokeExact(options, resolver_fn, releaser_fn, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_suppress_warnings {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_suppress_warnings");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_suppress_warnings(shaderc_compile_options_t options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_suppress_warnings$descriptor() {
        return shaderc_compile_options_set_suppress_warnings.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_suppress_warnings(shaderc_compile_options_t options)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_suppress_warnings$handle() {
        return shaderc_compile_options_set_suppress_warnings.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_suppress_warnings(shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_suppress_warnings$address() {
        return shaderc_compile_options_set_suppress_warnings.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_suppress_warnings(shaderc_compile_options_t options)
     * }
     */
    public static void shaderc_compile_options_set_suppress_warnings(MemorySegment options) {
        var mh$ = shaderc_compile_options_set_suppress_warnings.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_suppress_warnings", options);
            }
            mh$.invokeExact(options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_target_env {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_target_env");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_env(shaderc_compile_options_t options, shaderc_target_env target, uint32_t version)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_target_env$descriptor() {
        return shaderc_compile_options_set_target_env.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_env(shaderc_compile_options_t options, shaderc_target_env target, uint32_t version)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_target_env$handle() {
        return shaderc_compile_options_set_target_env.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_env(shaderc_compile_options_t options, shaderc_target_env target, uint32_t version)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_target_env$address() {
        return shaderc_compile_options_set_target_env.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_env(shaderc_compile_options_t options, shaderc_target_env target, uint32_t version)
     * }
     */
    public static void shaderc_compile_options_set_target_env(MemorySegment options, int target, int version) {
        var mh$ = shaderc_compile_options_set_target_env.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_target_env", options, target, version);
            }
            mh$.invokeExact(options, target, version);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_target_spirv {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_target_spirv");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_spirv(shaderc_compile_options_t options, shaderc_spirv_version version)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_target_spirv$descriptor() {
        return shaderc_compile_options_set_target_spirv.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_spirv(shaderc_compile_options_t options, shaderc_spirv_version version)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_target_spirv$handle() {
        return shaderc_compile_options_set_target_spirv.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_spirv(shaderc_compile_options_t options, shaderc_spirv_version version)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_target_spirv$address() {
        return shaderc_compile_options_set_target_spirv.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_target_spirv(shaderc_compile_options_t options, shaderc_spirv_version version)
     * }
     */
    public static void shaderc_compile_options_set_target_spirv(MemorySegment options, int version) {
        var mh$ = shaderc_compile_options_set_target_spirv.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_target_spirv", options, version);
            }
            mh$.invokeExact(options, version);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_warnings_as_errors {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_warnings_as_errors");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_warnings_as_errors(shaderc_compile_options_t options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_warnings_as_errors$descriptor() {
        return shaderc_compile_options_set_warnings_as_errors.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_warnings_as_errors(shaderc_compile_options_t options)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_warnings_as_errors$handle() {
        return shaderc_compile_options_set_warnings_as_errors.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_warnings_as_errors(shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_warnings_as_errors$address() {
        return shaderc_compile_options_set_warnings_as_errors.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_warnings_as_errors(shaderc_compile_options_t options)
     * }
     */
    public static void shaderc_compile_options_set_warnings_as_errors(MemorySegment options) {
        var mh$ = shaderc_compile_options_set_warnings_as_errors.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_warnings_as_errors", options);
            }
            mh$.invokeExact(options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_limit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_limit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_limit(shaderc_compile_options_t options, int limit, int value)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_limit$descriptor() {
        return shaderc_compile_options_set_limit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_limit(shaderc_compile_options_t options, int limit, int value)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_limit$handle() {
        return shaderc_compile_options_set_limit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_limit(shaderc_compile_options_t options, int limit, int value)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_limit$address() {
        return shaderc_compile_options_set_limit.ADDR;
    }
